--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -73,11 +73,19 @@
   <div class="container-fluid pageMargin">
 
     <!-- Top Five -->
-    <div class="row">
+    <div class="row d-none d-lg-block">
       <div class="headBox">
         <p>Top Sellers</p>
       </div>
     </div>
+
+    <div class="row d-sm-block d-md-none">
+      <div class="headBox">
+        <p>Drinks</p>
+      </div>
+    </div>
+
+
     <div class="d-none d-lg-block">
       <div class="row disappearJ bgWhite">
         <div class="col topFive">
@@ -162,18 +170,17 @@
         </div>
       </div>
     </div>
-    <div class="row d-sm-block d-md-none">
-      <div class="col g-0">
+    <div class="row d-sm-block d-md-none" style="margin-bottom: 30px;">
+      <div class="col g-0 menuImage">
         <img src="../assssssssssssssssssssssssets/mobile1.jpg" style="width: 100%; height: 100%;"
           alt="Banh mi/sandwich">
       </div>
     </div>
-    <div class="row">
-      <div class="headBox">
+    <div class="row d-none d-lg-block">
+      <div class="headBox" >
         <p>Drinks</p>
       </div>
     </div>
-
 
 
 
