--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand yellowJ" href="../index.html"> <img class="mobileBSLogo appearJ"
-                            src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo"></a>
+                            src="../assets/bestSandwich logo.png" alt="Picture of Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="" style="width: 100%;">
                             <div class="row">
-                                <div class="col centerJ">
+                                <div class="col centerJ blackBg">
                                     <div class="row evenJ navRowJ">
                                         <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
                                             <div class="accordion-item"
@@ -43,19 +43,19 @@
 
                                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                                     data-bs-parent="#accordionFlushExample">
-                                                    <div class="accordion-body blackBg"><a
+                                                    <div class="accordion-body blackBg mobileNavCoverJ"><a
                                                             class="nav-link navLinksJ yellowJ"
                                                             href="./Menu.html">Food</a></div>
-                                                    <div class="accordion-body blackBg"><a
-                                                            class="nav-link navLinksJ yellowJ"
+                                                    <div class="accordion-body blackBg mobileNavCoverJ"><a
+                                                            class="nav-link navLinksJ yellowJ "
                                                             href="./Drinks.html">Drinks</a></div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
-                                            href="./ContactUs.html">Contact Us</a>
                                         <a class="nav-link yellowJ navLinksJ txtCenterJ aboutNavJ" aria-current="page"
                                             href="./AboutUs.html">About Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
+                                            href="./ContactUs.html">Contact Us</a>
                                         <a class="nav-link yellowJ navLinksJ txtCenterJ banhMiNavJ"
                                             href="./BanhMi.html">Banh Mi?</a>
                                     </div>
@@ -63,7 +63,7 @@
 
                                 <div class="col-1 centerJ disappearJ">
                                     <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
-                                            alt="Best Sandwiches & Smoothies Logo"></a>
+                                            alt="Picture of Logo"></a>
                                 </div>
                                 <div class="col yugiJ alignCenterJ disappearJ">
                                     <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
@@ -75,7 +75,6 @@
                 </div>
             </nav>
         </div>
-    </div>
 
 
     <div class="container-fluid pageMargin">
