--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -63,7 +63,7 @@
                                 </div>
                                 <div class="col yugiJ alignCenterJ disappearJ">
                                     <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
-                                        Smothies</h1>
+                                        Smoothies</h1>
                                 </div>
                             </div>
                         </div>
