--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -234,9 +234,9 @@
                     <div>Sliced Salami & American Cheese</div>
                 </div>
             </div>
-            <div class="col g-0 d-none d-lg-block">
+            <div class="col g-0 d-none d-lg-block d-flex justify-content-end">
                 <img class="menuImage" src="../assssssssssssssssssssssssets/Sandwich2.png"
-                    style="width: 870px; height: 797px;" alt="Banh Mi/Sandwich">
+                    style="width: 901px; height: 797px;" alt="Banh Mi/Sandwich">
             </div>
 
         </div>
