--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -79,9 +79,15 @@
 
 
     <div class="container-fluid pageMargin">
-        <div class="row">
+        <div class="row d-none d-lg-block">
             <div class="headBox">
                 <p>Top Sellers</p>
+            </div>
+        </div>
+
+        <div class="row d-sm-block d-md-none">
+            <div class="headBox">
+                <p>Menu</p>
             </div>
         </div>
 
@@ -175,13 +181,13 @@
         </div>
 
         <div class="row d-sm-block d-md-none">
-            <div class="col g-0">
-                <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;"
+            <div class="col g-0 " style="padding-bottom: 30px;">
+                <img class="menuImage" src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;"
                     alt="Banh Mi/Sandwich">
             </div>
         </div>
 
-        <div class="row">
+        <div class="row d-none d-lg-block">
             <div class="headBox">
                 <p>Menu</p>
             </div>
