--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -74,7 +74,7 @@
                 </div>
             </nav>
         </div>
-
+    </div>
 
     <div class="container-fluid pageMargin">
         <div class="row d-none d-lg-block">
