--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand yellowJ" href="./index.html"> <img class="mobileBSLogo appearJ"
-                            src="../assets/bestSandwich logo.png" alt="Picture of Logo"></a>
+                            src="./assets/bestSandwich logo.png" alt="Picture of Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -818,7 +818,7 @@
                         <div class="row sansCollectionJ">
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
                             <p class="yellowJ footerFontSize">
-                                <img src="../assets/phone symbol.png" alt="icon of a phone">
+                                <img src="./assets/phone symbol.png" alt="icon of a phone">
                                 <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
                             </p>
                             <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
@@ -833,14 +833,14 @@
                         <div class="row">
                             <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"
                                 target="_blank">
-                                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="facebook icon">
+                                <img class="img-fluid" src="./assets/FACEBOOK.png" alt="facebook icon">
                             </a>
                             <a class="footerIconsJ"
                                 href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton" target="_blank">
-                                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="yelp icon">
+                                <img class="img-fluid" src="./assets/icons8-yelp-100.png" alt="yelp icon">
                             </a>
-                            <a class="footerIconsJ" href="../index.html">
-                                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="best sandwich logo">
+                            <a class="footerIconsJ" href="./index.html">
+                                <img class="img-fluid" src="./assets/bestSandwich logo.png" alt="best sandwich logo">
                             </a>
                         </div>
                     </div>
@@ -853,7 +853,7 @@
         <div class="row">
             <div class="col">
                 <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
-                    <img class="phoneImageJ" src="../assets/phone symbol.png" alt="icon of phone">
+                    <img class="phoneImageJ" src="./assets/phone symbol.png" alt="icon of phone">
                     <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
                 </p>
                 <p class="yellowJ footerFontSize" style="width: 115px;">
@@ -864,14 +864,14 @@
                 <div class="row rightJ">
                     <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516"
                         target="_blank">
-                        <img class="img-fluid" src="../assets/FACEBOOK.png" alt="facebook icon">
+                        <img class="img-fluid" src="./assets/FACEBOOK.png" alt="facebook icon">
                     </a>
                     <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton"
                         target="_blank">
-                        <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="yelp icon">
+                        <img class="img-fluid" src="./assets/icons8-yelp-100.png" alt="yelp icon">
                     </a>
-                    <a class="footerIconsMobileJ" href="../index.html">
-                        <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="best sandwich logo">
+                    <a class="footerIconsMobileJ" href="./index.html">
+                        <img class="img-fluid" src="./assets/bestSandwich logo.png" alt="best sandwich logo">
                     </a>
                 </div>
                 <div class="row">
